# glue-medical

./: .gitignore  .travis.yml  CHANGES.rst  LICENSE  README.md  README.rst  appveyor.yml  setup.cfg  setup.py  test_script.py  tox.ini
.github/workflows/: ci_workflows.yml
glue_medical/: __init__.py  dicom_factory.py  dicom_importer.py  medical_coordinates.py  nifti_factory.py  nifti_importer.py  utils.py
glue_medical.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
glue_medical/dicom/: dicom_factory.py  dicom_importer.py
glue_medical/nifti/: nifti_exporter.py  nifti_factory.py
glue_medical/nrrd/: nrrd_factory.py
glue_medical/tests/: test_dicom_factory.py
glue_medical/tests/data/: LICENSE
