[metadata]
name = glue-medical
url = https://github.com/glue-viz/glue-medical
description = Plugin for glue to support medical data
long_description = file: README.rst

[options]
zip_safe = True
packages = find:
setup_requires = setuptools_scm
install_requires = 
	numpy
	glue-core>=0.12
	pydicom

[options.entry_points]
glue.plugins = 
	glue_medical = glue_medical:setup

